event listener, some angular refactoring

--- a/profapp/templates/index_layout.html
+++ b/profapp/templates/index_layout.html
@@ -11,7 +11,9 @@
 </head>
 <body ng-app="Profireader" >
 
-
+<script>
+app = angular.module('Profireader', ['ui.bootstrap', 'profireaderdirectives']);
+</script>
 
         {% include 'partials/base_profireader.html' %}
 
