--- a/profapp/templates/partials/imports_profireader.html
+++ b/profapp/templates/partials/imports_profireader.html
@@ -1,5 +1,6 @@
 <script src="{{ url_for('static', filename = 'image_editor/assets/js/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename = 'image_editor/assets/js/bootstrap.min.js') }}"></script>
+
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.2.js"></script>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -13,8 +14,12 @@
 {#<link href="{{ url_for('static', filename = 'image_editor/demo/css/main.css') }}" rel="stylesheet">#}
 {#<script src="{{ url_for('static', filename = 'image_editor/demo/js/main.js') }}"></script>#}
 
+<script src="/static/js/underscore-min.js"></script><!-- Comment if you need to use raw source code -->
 
 <script src="/static/filemanager/angular-filemanager.min.js"></script><!-- Comment if you need to use raw source code -->
 <script src="/static/filemanager/cached-templates.js"></script><!-- Comment if you need to use raw source code -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/static/filemanager/angular-filemanager.css">
+
+
+<script src="/static/js/profireader_angular.js"></script>
