--- a/profapp/templates/_ruslan/partials/_header_files_crop.html
+++ b/profapp/templates/_ruslan/partials/_header_files_crop.html
@@ -1,8 +1,6 @@
 <!---cropper---->
-
-    <script src="//static.profireader.com/static/tinymce.pr/tinymce.jquery.pr.js"></script>
-    <script src="//static.profireader.com/static/new/angular-ui-tinymce/tinymce.js"></script>
-    <script src="//static.profireader.com/static/new/angular-ui-slider/slider.js"></script>
-       <script>
-           pr_angular_modules.push('ui.tinymce');
-       </script>
+<script src="//static.profireader.com/static/new/angular-crop/ng-img-crop.js"></script>
+<link rel="stylesheet" type="text/css" href="//static.profireader.com/static/new/angular-crop/ng-img-crop.css">
+<script>
+    pr_angular_modules.push('ngImgCrop');
+</script>
