cropper and filemaneger fix bugs, comments

--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -11,6 +11,7 @@
             $scope.favorite = {{ favorite }}
             $scope.favorite ? addToMenu_Selected('favorite') : addToMenu_Selected('list');
 
+            {#    into this function put url    #}
             $scope.loadNextPage('')
 
         });
