--- a/profapp/static/css/_profreader.css
+++ b/profapp/static/css/_profreader.css
@@ -449,3 +449,17 @@
 .fa-heart{
     color: red!important;
 }
+.show-more{
+    text-align: center;
+    text-decoration: underline;
+}
+
+.grid-loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 1.5em;
+}
