--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -24,9 +24,9 @@
     {#    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">#}
     <link rel="stylesheet" href="//static.profireader.com/static/css/icons.css">
 
-{%- endblock styles %}
+{% endblock styles %}
 
-{%- block head %}
+{% block head %}
     {{ super() }}
     <script>
         var pr_angular_modules = ['ui.bootstrap', 'profireaderdirectives', 'ngSanitize', 'ajaxFormModule',
