--- a/profapp/static/new/cropper/cropper.css
+++ b/profapp/static/new/cropper/cropper.css
@@ -1,15 +1,17 @@
 /*!
- * Cropper v0.10.1
+ * Cropper v1.0.0
  * https://github.com/fengyuanchen/cropper
  *
  * Copyright (c) 2014-2015 Fengyuan Chen and contributors
  * Released under the MIT license
  *
- * Date: 2015-07-05T10:44:58.203Z
+ * Date: 2015-10-10T02:10:06.999Z
  */
 .cropper-container {
   position: relative;
   overflow: hidden;
+  font-size: 0;
+  line-height: 0;
   -ms-touch-action: none;
       touch-action: none;
   -webkit-user-select: none;
@@ -26,12 +28,13 @@
   width: 100%;
   min-width: 0 !important;
   max-width: none !important;
-  height: 100%;
+  height: 100%; 
   min-height: 0 !important;
   max-height: none !important;
 
   image-orientation: 0deg !important;
 }
+
 .cropper-canvas,
 .cropper-drag-box,
 .cropper-crop-box,
@@ -42,47 +45,52 @@
   bottom: 0;
   left: 0;
 }
+
 .cropper-drag-box {
   background-color: #fff;
-  filter: alpha(opacity=0);
+  filter: alpha(opacity=0); 
   opacity: 0;
 }
+
 .cropper-modal {
   background-color: #000;
-  filter: alpha(opacity=50);
+  filter: alpha(opacity=50); 
   opacity: .5;
 }
+
 .cropper-view-box {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 100%; 
   overflow: hidden;
-  outline: 1px solid #69f;
-  outline-color: rgba(102, 153, 255, .75);
+  outline: 1px solid #39f;
+  outline-color: rgba(51, 153, 255, .75);
 }
+
 .cropper-dashed {
   position: absolute;
   display: block;
-  filter: alpha(opacity=50);
-  border: 0 dashed #fff;
+  filter: alpha(opacity=50); 
+  border: 0 dashed #eee;
   opacity: .5;
 }
 .cropper-dashed.dashed-h {
-  top: 33.33333333%;
+  top: 33.33333%;
   left: 0;
   width: 100%;
-  height: 33.33333333%;
+  height: 33.33333%; 
   border-top-width: 1px;
   border-bottom-width: 1px;
 }
 .cropper-dashed.dashed-v {
   top: 0;
-  left: 33.33333333%;
-  width: 33.33333333%;
-  height: 100%;
+  left: 33.33333%;
+  width: 33.33333%;
+  height: 100%; 
   border-right-width: 1px;
   border-left-width: 1px;
 }
+
 .cropper-center {
   position: absolute;
   top: 50%;
@@ -90,28 +98,29 @@
   display: block;
   width: 0;
   height: 0;
-  filter: alpha(opacity=75);
+  filter: alpha(opacity=75); 
   opacity: .75;
 }
 .cropper-center:before,
-.cropper-center:after {
+  .cropper-center:after {
   position: absolute;
   display: block;
-  content: " ";
-  background-color: #fff;
+  content: " "; 
+  background-color: #eee;
 }
 .cropper-center:before {
   top: 0;
-  left: -2px;
-  width: 5px;
+  left: -3px;
+  width: 7px;
   height: 1px;
 }
 .cropper-center:after {
-  top: -2px;
+  top: -3px;
   left: 0;
   width: 1px;
-  height: 5px;
+  height: 7px;
 }
+
 .cropper-face,
 .cropper-line,
 .cropper-point {
@@ -119,16 +128,18 @@
   display: block;
   width: 100%;
   height: 100%;
-  filter: alpha(opacity=10);
+  filter: alpha(opacity=10); 
   opacity: .1;
 }
+
 .cropper-face {
   top: 0;
   left: 0;
   background-color: #fff;
 }
+
 .cropper-line {
-  background-color: #69f;
+  background-color: #39f;
 }
 .cropper-line.line-e {
   top: 0;
@@ -154,11 +165,12 @@
   height: 5px;
   cursor: s-resize;
 }
+
 .cropper-point {
   width: 5px;
   height: 5px;
-  background-color: #69f;
-  filter: alpha(opacity=75);
+  background-color: #39f;
+  filter: alpha(opacity=75); 
   opacity: .75;
 }
 .cropper-point.point-e {
@@ -206,7 +218,7 @@
   width: 20px;
   height: 20px;
   cursor: se-resize;
-  filter: alpha(opacity=100);
+  filter: alpha(opacity=100); 
   opacity: 1;
 }
 .cropper-point.point-se:before {
@@ -217,8 +229,8 @@
   width: 200%;
   height: 200%;
   content: " ";
-  background-color: #69f;
-  filter: alpha(opacity=0);
+  background-color: #39f;
+  filter: alpha(opacity=0); 
   opacity: 0;
 }
 @media (min-width: 768px) {
@@ -237,40 +249,39 @@
   .cropper-point.point-se {
     width: 5px;
     height: 5px;
-    filter: alpha(opacity=75);
+    filter: alpha(opacity=75); 
     opacity: .75;
   }
 }
+
 .cropper-bg {
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC");
 }
+
 .cropper-invisible {
-  filter: alpha(opacity=0);
+  filter: alpha(opacity=0); 
   opacity: 0;
 }
+
 .cropper-hide {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: auto!important;
-  min-width: 0!important;
-  max-width: none!important;
-  height: auto!important;
-  min-height: 0!important;
-  max-height: none!important;
-  filter: alpha(opacity=0);
-  opacity: 0;
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
 }
+
 .cropper-hidden {
   display: none !important;
 }
+
 .cropper-move {
   cursor: move;
 }
+
 .cropper-crop {
   cursor: crosshair;
 }
+
 .cropper-disabled .cropper-drag-box,
 .cropper-disabled .cropper-face,
 .cropper-disabled .cropper-line,
