--- a/profapp/templates/company/company_edit.html
+++ b/profapp/templates/company/company_edit.html
@@ -41,10 +41,10 @@
             <div class="row company">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"><h3>Create a new company</h3></div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 create-new-company">
-
-                    <button class="btn btn-default save-profile pull-right border-radius" type="button"
-                            ng-click="$af.save(data)" ng-disabled="!$af.isActionAllowed(data, 'save') ">{{ _('Save new
-                        profile') }}
+                    <button class="btn btn-default save-profile pull-right border-radius"
+                            type="button"
+                            ng-click="$af.save(data)"
+                            ng-disabled="!$af.isActionAllowed(data, 'save') ">{{ _('Save new profile') }}
                     </button>
                 </div>
             </div>
