--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -3,7 +3,7 @@
 {% block head %}
     {{ super() }}
     {% include '_ruslan/partials/_header_files_articles.html' %}
-    {% include '_ruslan/partials/_header_files_crop.html' %}
+{#    {% include '_ruslan/partials/_header_files_crop.html' %}#}
 {% endblock head %}
 
 {% block portal_content %}
@@ -104,24 +104,7 @@
                     <img pr-image="company.logo_file_id" alt="image" ng-show="!edit">
 
                     <div style="width: 400px; height: 400px;" ng-if="edit">
-                        <div>Select an image file: <input type="file" id="fileInput" /></div>
-                        <img-crop
-                                image="myImage"
-                                on-change="cropperChanged()"
-                                aresult-image="myCroppedImage"
-                                achange-on-fly="{boolean}"
-                                area-type="square"
-                                aarea-min-size="{number}"
-                                aresult-image-size="{number}"
-                                aresult-image-format="{string}"
-                                aresult-image-quality="{number}"
-                                on-change="{expression}"
-                                aon-load-begin="{expression}"
-                                aon-load-done="{expression}"
-                                aon-load-error="{expression}"
-                        ></img-crop>
-
-                        <!--                        <div ng-model="data.image" pr-crop pr-company-id="{{ company.id }}"></div> -->
+                        <div style="background-color: #1ab7ea" ng-model="data.image" pr-crop pr-company-id="{{ company.id }}"></div>
                     </div>
                 </div>
 
