--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -10,39 +10,46 @@
 
 <script type="text/ng-template" id="cropper.html">
     {% raw %}
-    <div class="img-container">
-        <img style="width: 100%"/>
+
+    <div style="position: relative;  width: 100%; height: 300px;" class="img-container">
+        <div  style="position: relative;  width: 100%; height: 100%;" class="img-container-cropper">
+            <img style="width: 100%; height: 100%;"/>
+        </div>
     </div>
     <div class="btn-group">
-        <button ng-disabled="!data.image.image_file_id" ng-click="cropper('zoom', 0.1)" class="btn btn-primary"
+        <button ng-if="1" ng-disabled="!data.image.image_file_id" ng-click="cropper('zoom', 0.1)" class="btn
+        btn-primary"
                 type="button" title="Zoom In">
                   <span class="docs-tooltip" data-toggle="tooltip"><span
                           class="glyphicon glyphicon-zoom-in"></span></span>
         </button>
-        <button ng-disabled="!data.image.image_file_id" ng-click="cropper('zoom', -0.1)" class="btn btn-primary"
+        <button ng-if="1" ng-disabled="!data.image.image_file_id" ng-click="cropper('zoom', -0.1)" class="btn
+        btn-primary"
                 type="button"
                 title="Zoom Out">
                  <span class="docs-tooltip" data-toggle="tooltip"><span
                          class="glyphicon glyphicon-zoom-out"></span></span>
         </button>
-        <button ng-if="user_have_company || !cropper_for_copmany" class="btn btn-primary" type="button" value="{{ image_file_url }}"
+        <button ng-if="user_have_company || !cropper_for_copmany" class="btn btn-primary" type="button"
+                value="{{ image_file_url }}"
                 ng-click="chooseImage(true, avatar)">
                 <span class="docs-tooltip" data-toggle="tooltip" title="Chose image"><span
                         class="glyphicon glyphicon-folder-open"></span></span>
         </button>
-        <label ng-show="!user_have_company && cropper_for_copmany" class="btn btn-primary btn-upload" for="inputImage" title="Upload image file">
-            <input type="file" class="sr-only" id="inputImage" name="file" accept="image/*">
+        <label class="btn btn-primary btn-upload" for="inputImage"
+              title="Upload image file">
+            <input type="file" class="sr-only" id="inputImage" class="pr-cropper-input-image" name="file" accept="image/*">
             <span class="docs-tooltip" data-toggle="tooltip" title="Import image with Blob URLs">
               <span class="glyphicon glyphicon-upload" style="top:7px!important"></span>
             </span>
           </label>
-        <button  class="btn btn-primary" type="button"
+        <button class="btn btn-primary" type="button"
                 ng-click="chooseImage(false)">
                 <span class="docs-tooltip" data-toggle="tooltip" title="Chose image"><span
                         class="glyphicon glyphicon-remove-circle"></span></span>
         </button>
 
-    <input type="hidden" ng-model="data.article.image_file_id">
+        <input type="hidden" ng-model="data.article.image_file_id">
     </div>
     {% endraw %}
 </script>
