--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -21,7 +21,8 @@
             $scope.user = {{g.user_dict | tojson | safe}};
 
             $scope.$$translate = {{translates('CompanyProfile') | safe}};
-
+            $scope.cropper_for_copmany = true;
+            $scope.user_have_company = true;
             $scope.company = {{company.get_client_side_dict() | tojson | safe}};
 
             $scope.url_back = {{raw_url_for('company.show') | safe}};
@@ -57,7 +58,12 @@
 
             $scope.afterSave = function (resp, deff) {
                 if (resp && !$scope.data.id) {
+
                     window.location.href = '{{ url_for('company.show') |safe }}';
+                }
+
+                if(resp.error){
+                    alert('Your image is not valid!We saved your old image!')
                 }
                 $scope.edit = false;
                 $scope.save = false;
@@ -107,7 +113,7 @@
                         >{{ _('Save profile') }}
                         </button>
                         <button class="btn btn-default edit-profile pull-right border-radius" type="button"
-                                ng-click="change()" ng-if="edit_rights">{{ _('Edit profile') }}
+                                ng-click="change()" ng-if="edit_rights && !save">{{ _('Edit profile') }}
                         </button>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
