--- a/profapp/templates/general/user_profile.html
+++ b/profapp/templates/general/user_profile.html
@@ -102,7 +102,7 @@
 
     <div class="form info" style="padding-left: 10px" ng-controller="UserLoginController">
         <div ng-controller="UserLoginController" class="user-profile">
-            <h2>{{ user.profireader_name }}</h2>
+            <h2 pr-test="UserProfiName">{{ user.profireader_name }}</h2>
             <div class="info">
                 {#        <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br>#}
                 {#        <img class="img-rounded profile-thumbnail" src="{{ user.profireader_avatar_url }}" style="width:{{ avatar_size }}px;height:{{ avatar_size }}px;border:0"><br>#}
