--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -26,9 +26,9 @@
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 
-                        <span class="label label-success"><a target="_blank"
+                        <span class="label label-success"><a pr-test="ArticleDivision" target="_blank"
                                                              href="//{{ article.portal.host }}/{{ article.division.name}}/1/?search_text=">{{ article.division.name}}</a></span>
-                        <a target="_blank"
+                        <a pr-test="ArticlePortal" target="_blank"
                            href="//{{ article.portal.host}}/_c/{{ article.company.id}}/{{ article.company.name}}"
                            class="item-company">{{ article.portal.name}}</a>
                          <!--TODO OZ by SS we need this link?
@@ -53,11 +53,11 @@
                     <p>{{ article.short}}</p>
                 </div>
                 <div class="row">
-                    <div class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                    <div pr-test="ArticleIsFavorite" class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-lg-5 col-md-5 col-sm-5 col-xs-5">
                         <i ng-if="!article.is_favorite" class="fa fa-heart-o"></i><i ng-if="article.is_favorite" class="fa fa-heart"></i> Favorite
                     </div>
                     <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                        <span class="pull-right"><i class="fa fa-share"></i> Share</span>
+                        <span pr-test="Share" class="pull-right"><i class="fa fa-share"></i> Share</span>
                     </div>
                 </div>
                 <div class="item-additional-info">
