--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -76,7 +76,7 @@
     <div class="container" ng-init="loadData()" ng-controller="companies_list">
         <div class="row join-company">
             <div class="col-lg-3 create-company pull-right">
-                        <button class="btn btn-default" type="button" ng-click='createCompany()'>{{ _('Create new company') }}</button>
+                        <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'>{{ _('Create new company') }}</button>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -86,7 +86,7 @@
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 search-company">
                         <div class="input-group" style="width: 100%">
-                              <input type="text" class="form-control" placeholder="Search for... "
+                              <input pr-test="SearchForCompany" type="text" class="form-control" placeholder="Search for... "
                                      uib-typeahead-on-select="onSelect($item, $model, $label)"
                                      uib-typeahead-template-url="typeaheadTemplate.html"
                                      ng-model="selectedCompany_name"
@@ -125,19 +125,19 @@
         <div class="row company-list">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies">Your company list:</h3><h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2></div>
             <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6" ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
-                <div class="thumbnail company-thumbnail" >
+                <div pr-test="CompanyThumbnail" class="thumbnail company-thumbnail" >
                     <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
                         <img pr-image="my_employer.logo_file_id" alt="image" style="width: 100%" >
                     </a>
-                  <div class="caption some-company-info">
+                  <div pr-test="SomeCompanyInfo" class="caption some-company-info">
 
-                      <h3><a href="{{ url_company_profile({company_id: my_employer.id}) }}">
+                      <h3><a pr-test="YourCompanyListTitles" href="{{ url_company_profile({company_id: my_employer.id}) }}">
                         {{ _('%(name)s' , my_employer) }}
                     </a></h3>
                       <p>{{ _((my_employer.author_user_id==data.user_id? ' Type: OWN COMPANY':'JOINED COMPANY') , my_employer) }}</p>
                       <span ng-if="!my_employer.own_portal.host"><b>{{_('Portals')}}: </b>{{_('No')}}</span>
                       <div ng-if="my_employer.own_portal.host">
-                          <button class="btn btn-default" type="button" ng-click="goToPortal(my_employer.own_portal.host)">{{ _("Go to portal") }}</button>
+                          <button pr-test="GoToPortalButton" class="btn btn-default" type="button" ng-click="goToPortal(my_employer.own_portal.host)">{{ _("Go to portal") }}</button>
                     </div>
 
                   </div>
