see rejected in membership table

--- a/profapp/templates/company/portals_partners.html
+++ b/profapp/templates/company/portals_partners.html
@@ -65,6 +65,16 @@
             }) : add_message('Sorry!!!You haven\'t got  appropriate rights!', 'danger', 8000)
         };
 
+        $scope.grid_filter_action = function(id, action, row, column_name){
+            $scope.loading = true;
+            return $ok($scope.url_portals_partners ,{action:action}, function(resp){
+                $scope.gridApi.grid.set_data_function(resp);
+            }).finally(function () {
+                $scope.loading = false
+            })
+        };
+
+
         $scope.grid_action = function (id, action, row, column_name) {
             if(row.actions[action] == true){
                 return $ok($scope.url_change_status({company_id:$scope.company_id, portal_id:row.portal.id}) ,{action:action}, function(resp){}).finally(function () {
@@ -89,9 +99,9 @@
                                 name: 'portal.own_company.name', type: 'link',
                                 href: 'url_company_profile({company_id: row.entity.portal.own_company.id})',img:"portal.own_company.logo_file_id"
                             }, {
-                                name: 'status', width: '10%', afilter: {type: 'input'}
+                                name: 'status', width: '20%', filter: {type: 'button', onclick: 'grid_filter_action'}
                             }, {
-                                name: 'rights', width: '300', type: 'icons', afilter: {type: 'input'}},
+                                name: 'rights', width: '200', type: 'icons', afilter: {type: 'input'}},
                             {
                                 name:'actions', type: 'actions', onclick: 'grid_action'}
                         ]
@@ -115,7 +125,11 @@
             </button>
             <i ng-show="loadingPortals" class="glyphicon glyphicon-refresh"></i>
 
-        <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1"></div>
+        <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1">
+            <div class="well grid-loading" ng-show="loading">
+              <i class="fa fa-spin fa-spinner"></i><div>Data Loading...</div>
+            </div>
+        </div>
         </div>
     {% endraw %}
 {% endblock portal_content %}
