--- a/profapp/templates/company/company_partner_update.html
+++ b/profapp/templates/company/company_partner_update.html
@@ -26,20 +26,23 @@
 
     <div ng-controller="company_partner_update">
         <div af af-after-save="after_save" af-watch="data.member" ng-model="data">
-            <h2>
-                <img class="person-small-cover" pr-image="data.member.company.logo_file_id"/><img class="person-small-cover" pr-image="data.employeer.logo_file_id"/>
-                {{ _('Portal partner `%(data.member.company.name)s` at company `%(data.employeer.name)s`') }}</h2>
-            {{ _('status') }} <select ng-model="data.member.status"
-                                      ng-options="status as status disable when !available for (status, available) in data.statuses_available"></select><br>
-            <div ng-class="{disabled: !permitted}" ng-repeat="(right_name, permitted) in data.member.rights">
-                <img src="//static.profireader.com/static/images/0.gif"
-                     class="pr-grid-cell-field-type-icons-icon pr-grid-cell-field-type-icons-icon-{{ right_name }}"/>
-                <label><input ng-model="data.member.rights[right_name]" type="checkbox"/> {{ right_name }}</label>
+            <div class="update-company-partner" ng-if="!data.frozen">
+                <h2><img class="person-small-cover" pr-image="data.member.company.logo_file_id"/><img
+                        class="person-small-cover" pr-image="data.employeer.logo_file_id"/>
+                    {{ _('Portal partner `%(data.member.company.name)s` at company `%(data.employeer.name)s`') }}</h2>
+                {{ _('status') }} <select ng-model="data.member.status"
+                                          ng-options="status as status disable when !available for (status, available) in data.statuses_available"></select><br>
+                <div ng-class="{disabled: !permitted}" ng-repeat="(right_name, permitted) in data.member.rights">
+                    <img src="//static.profireader.com/static/images/0.gif"
+                         class="pr-grid-cell-field-type-icons-icon pr-grid-cell-field-type-icons-icon-{{ right_name }}"/>
+                    <label><input ng-model="data.member.rights[right_name]" type="checkbox"/> {{ right_name }}</label>
+                </div>
+                <button class="btn fr" type="button" ng-disabled="!$af.isActionAllowed(data, 'save')"
+                        ng-click="$af.save(data)">{{ _('Save') }}
+                </button>
+                <button class="btn fr" type="button" ng-click="$af.reset(data)">{{ _('Reset') }}</button>
             </div>
-            <button class="btn fr" type="button" ng-disabled="!$af.isActionAllowed(data, 'save')"
-                    ng-click="$af.save(data)">{{ _('Save') }}
-            </button>
-            <button class="btn fr" type="button" ng-click="$af.reset(data)">{{ _('Reset') }}</button>
+            <div ng-if="data.frozen"><h2>This member was frozen! You can not edit it at the present time.</h2></div>
         </div>
     </div>
 
