--- a/profapp/templates/company/materials.html
+++ b/profapp/templates/company/materials.html
@@ -72,7 +72,11 @@
     <div ng-controller="materials_list">
         <h2>{{ _('Materials of company `%(company.name)s`')}}</h2>
         <a href="{{ url_material_create({company_id: company.id}) }}">{{ _('Create new material') }}</a>
-        <div class="grid" id="grid1" ui-grid-edit ui-grid-grouping ui-grid-pagination ui-grid="gridOptions1"></div>
+        <div class="grid" id="grid1" ui-grid-edit ui-grid-grouping ui-grid-pagination ui-grid="gridOptions1">
+            <div class="well grid-loading" ng-show="loading">
+              <i class="fa fa-spin fa-spinner"></i><div>Data Loading...</div>
+            </div>
+        </div>
     </div>
     {% endraw %}
 
