--- a/profapp/templates/general/portals_list.html
+++ b/profapp/templates/general/portals_list.html
@@ -13,7 +13,6 @@
             $scope.$$translate = {{ translates('portals_list')|safe }};
             $scope.search_text = '';
             $scope.next_page = 1;
-            $scope.old_search = null;
             $scope.subscribe = function (portal_id) {
                 {% if g.user_id %}
                     $ok('{{ url_for('reader.reader_subscribe_registered')|safe }}', {portal_id: portal_id}, function (resp) {
@@ -32,22 +31,18 @@
 
             $scope.search_for_portal = function () {
                 $scope.loading = true;
-                $scope.send_data = {text: $scope.search_text, next_page:$scope.next_page};
-                if($scope.old_search !== $scope.search_text){
-                    $ok('',$scope.send_data , function (resp) {
-                        $scope.data = resp;
-                        $scope.old_search = $scope.search_text
-                    }).finally(function () {
-                        $timeout(function(){
-                            $scope.loading = false;
-                            if($(document).height()-$(window).height() === 0){
-                                $scope.next_page +=1;
-                                $scope.old_search = null;
-                                $scope.search_for_portal()
-                            }
-                        }, 500)
-                    });
-                }
+                $scope.scroll_data = {text: $scope.search_text, next_page:$scope.next_page};
+                $ok('',$scope.scroll_data , function (resp) {
+                    $scope.data = resp;
+                }).finally(function () {
+                    $timeout(function(){
+                        $scope.loading = false;
+                        if($(document).height()-$(window).height() === 0 && !$scope.data.end){
+                            $scope.next_page +=1;
+                            $scope.search_for_portal()
+                        }
+                    }, 500)
+                });
             };
 
             $scope.loadNextPage('')
