--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -6,11 +6,8 @@
 <script>
 
     module.controller('list_reader', function ($scope, $ok, $timeout) {
-            $scope.next_page = 1;
-{#            $scope.article_details = {{ raw_url_for('article.details_reader') |safe}}#}
             $scope.favorite = {{ favorite }}
             $scope.favorite ? addToMenu_Selected('favorite') : addToMenu_Selected('list');
-
             {#    into this function put url    #}
             $scope.loadNextPage('')
 
@@ -41,7 +38,7 @@
                     </div>
                 </div>
                 <a target="_blank" type="link" href="//{{ article.portal.host}}/details/{{ article.id }}">
-                    <img class="list-reader-image" src="{{ fileUrl(article.image_file_id) }}" alt="img">
+                    <img class="list-reader-image" pr-image="article.image_file_id" alt="img">
                 </a>
                 <h3 class="item-title">
                     <a target="_blank"
