--- a/profapp/templates/company/company_partner_update.html
+++ b/profapp/templates/company/company_partner_update.html
@@ -26,7 +26,7 @@
 
     <div ng-controller="company_partner_update">
         <div af af-after-save="after_save" af-watch="data.member" ng-model="data">
-            <div class="update-company-partner" ng-if="!data.frozen" pr-user-rights="right_in">
+            <div class="update-company-partner" ng-if="data.member.status !== 'FROZEN'" pr-user-rights="right_in">
                 <h2><img class="person-small-cover" pr-image="data.member.company.logo_file_id"/><img
                         class="person-small-cover" pr-image="data.employeer.logo_file_id"/>
                     {{ _('Portal partner `%(data.member.company.name)s` at company `%(data.employeer.name)s`') }}</h2>
