--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -54,10 +54,10 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                        <i ng-if="!article.is_favorite" class="fa fa-heart-o"></i><i ng-if="article.is_favorite" class="fa fa-heart"></i> Favorite
+                        <i ng-if="!article.is_favorite" class="fa fa-heart-o"></i><i ng-if="article.is_favorite" class="fa fa-heart"></i> {{ _('Favorite') }}
                     </div>
                     <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                        <span class="pull-right"><i class="fa fa-share"></i> Share</span>
+                        <span class="pull-right"><i class="fa fa-share"></i>{{ _('Share') }}</span>
                     </div>
                 </div>
                 <div class="item-additional-info">
