--- a/profapp/templates/auth/change_email.html
+++ b/profapp/templates/auth/change_email.html
@@ -1,4 +1,4 @@
-{% extends "index_layout.html" %}
+{% extends "_ruslan/_index_layout.html" %}
 {% block title %}Profireader - Change Email Address{% endblock title %}
 {% block head %}
     {{ super() }}
@@ -10,6 +10,7 @@
 
 {% block portal_content %}
 <div ng-controller="UserLoginController">
+
     <h1 class="nice-title">{{ '{{' }}_('Change Your Email Address'){{ '}}' }}<span></span></h1>
 </div>
 <form action="{{ url_for('auth.change_email_request') }}" method="POST">
