--- a/profapp/templates/auth/change_password.html
+++ b/profapp/templates/auth/change_password.html
@@ -1,4 +1,4 @@
-{% extends "index_layout.html" %}
+{% extends "_ruslan/_index_layout.html" %}
 {% block title %}Profireader - Change Password{% endblock title %}
 {% block head %}
     {{ super() }}
