--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="row company-list">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies">Your company list:</h3><h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2></div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 link-page"><h5 ng-if="data.companies">Your company list:</h5><h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2></div>
             <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6" ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
                 <div pr-test="CompanyThumbnail" class="thumbnail company-thumbnail" >
                     <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
