--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -3,6 +3,16 @@
 {% block title %}Profireader - Articles list{% endblock title %}
 
 {% block portal_content %}
-<h1>{{ _('Help page') }}</h1>
-<p>{{ __('Help text') }}</p>
+    <div class="link-page">
+        <h5>{{ _('Help page') }}</h5>
+    </div>
+    <form class="help-page">
+        <h3>{{ __('Заповніть форму та надішліть нам повідомлення') }}<br>
+        <small>{{ __('Адміністратор сайту зв~яжеться з Вами') }}</small></h3>
+        <div class="form-for-message col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
+            <input type="email" class="form-control" placeholder="Email">
+            <textarea class="form-control" rows="4" placeholder="Питання та побажання"></textarea>
+    <button class="pull-right" type="submit">Надіслати</button>
+        </div>
+    </form>
 {% endblock portal_content %}
