--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -68,7 +68,22 @@
             $scope.afterLoad = function (resp, deff) {
                 $scope.edit_rights = $scope.rights_user_in_company['COMPANY_EDIT_PROFILE']
                 deff(resp);
-                $scope.logo_file_url = fileUrl(resp['logo_file_id']);
+{#                $scope.logo_file_url = fileUrl(resp['logo_file_id']);#}
+                $scope.crop = {
+                    'file_id': resp['logo_file_id'],
+                    'coordinates': {
+                        'width': 100,
+                        'height': 100,
+                        'y': 10,
+                        'x': 20
+                    },
+                    'minimal': 0.1,
+                    'aspect': 0.1,
+                    'upload': true,
+                    'browse': $scope.company.id,
+                    'noImage': "//static.profireader.com/static/front/img/profi.png",
+                    'urls': {}
+                }
             };
             $scope.myImage = '';
             $scope.myCroppedImage = '';
@@ -83,7 +98,6 @@
             }
 
             var handleFileSelect = function (evt) {
-                debugger;
                 var file = evt.currentTarget.files[0];
                 var reader = new FileReader();
                 reader.onload = function (evt) {
@@ -108,9 +122,12 @@
                     <img pr-image="company.logo_file_id" alt="image" ng-show="!edit">
 
                     <div style="width: 400px; height: 400px;" ng-if="edit">
-                        <div style="background-color: #1ab7ea" ng-model="data.image" pr-crop
-                             pr-company-id="{{ company.id }}"></div>
+                        <div pr-crop="crop"></div>
                     </div>
+                    {{ crop.file_id }}<br/>
+                    {{ crop.coordinates }}<br/>
+                    {{ crop.zoom }}<br/>
+
                 </div>
 
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 edit-company">
