--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -633,7 +633,7 @@ body {
   border-radius: 3px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   border: 1px solid #f5f5f5;
-  background-color: #e1f5fe;
+  background-color: #EAEAEA;
 }
 .profile-window h3 {
   text-align: center;
